Fixed responsiveness on tablet-sized devices

--- a/style.css
+++ b/style.css
@@ -330,6 +330,7 @@ main {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  justify-content: center;
   gap: 1rem;
   flex: none;
   padding-bottom: 1rem;
